<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.reciplease.DeviceListActivity">

    <ProgressBar
        android:id="@+id/progress_scan_devices"
        android:visibility="gone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_paired_devices"
        android:textSize="@android:dimen/app_icon_size"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_paired_devices"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_available_devices"
        android:textSize="@android:dimen/app_icon_size"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_available_devices"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/str_go_back"
        android:id="@+id/btn_go_back_device_list"
        />
</LinearLayout>