<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBlack"
    tools:context="com.example.reciplease.MainMenuFragment">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="414dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:elevation="8dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_create_recipe"
        android:layout_width="200dp"
        android:layout_height="344dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:paddingTop="45dp"
        android:backgroundTint="@color/colorBlue"
        android:gravity="center_horizontal|top"
        android:text="@string/str_create_recipe"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorWhite"
        android:textSize="28pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="200dp"
        android:layout_height="344dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:paddingTop="45dp"
        android:backgroundTint="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal|top"
        android:text="@string/str_share_recipe"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="200dp"
        android:layout_height="344dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:paddingBottom="45dp"
        android:backgroundTint="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal|bottom"
        android:text="@string/str_meals_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="344dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:paddingBottom="45dp"
        android:backgroundTint="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal|bottom"
        android:text="@string/str_exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_go_to_recipe_list"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_button"
        android:elevation="20dp" />

</RelativeLayout>