<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reciplease.MainActivity"
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/tv_connected_Device"
        android:layout_width="410dp"
        android:layout_height="49dp"
        android:background="@android:color/darker_gray"
        android:text="@string/str_not_connected"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_connected_Device"
        android:id="@+id/linebreak"
        app:layout_constraintVertical_bias="0.0"/>

    <ListView
        android:id="@+id/list_recipe_to_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linebreak"
        app:layout_constraintVertical_bias="0.0"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_recipe_to_send"
        android:id="@+id/linebreak2"
        app:layout_constraintVertical_bias="0.0"/>

    <ListView
        android:id="@+id/lv_ingredients_to_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linebreak2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_ingredients_to_send"
        android:id="@+id/linebreak3"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_send_recipe"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:background="@color/colorBlue"
            android:text="@string/lbl_btn_send"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_go_back"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorBlue"
            android:text="@string/str_go_back"
            android:textColor="@color/colorRed" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>